fix alignment issues

--- a/cdap-ui/app/styles/themes/cdap/theme.less
+++ b/cdap-ui/app/styles/themes/cdap/theme.less
@@ -268,11 +268,10 @@ body.theme-cdap {
       background-color: @cdap-darkness;
       color: white;
     }
-    .form-group {
-      label.control-label {
-        margin-top: 9px;
-        margin-bottom: 9px;
-      }  
+
+    .h4-margin {
+      margin-top: 9px;
+      margin-bottom: 9px;
     }
     
     // caskConfirm modal styling (no modal-lg or modal-sm class present)
